--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -48,19 +48,57 @@
 	float:left;
 	}
 	
-	/*.menucontent{
+	.menucontent{
 	position:relative;
-	top:10%;
-	margin-right:10px;
+	top:20px;
+	margin:10px;
+	padding:20px;
 	text-align:right;
 	font-size:20px;
+	font-family:helvetica;
 		border-color:#70B0F9;
 		border-width:medium;
 		border-style:solid;
 	
-	}*/
+	}
 	.close{
 		max-height:100%;
+	
+	}
+	.aboutcontent{
+	position:relative;
+	top:50px;
+	margin:20px;
+	padding:20px;
+	border-color:#70B0F9;
+	border-width:medium;
+	border-style:solid;
+	}
+	.blablabla{
+	
+	position:relative;
+	top:100px;
+	font-weight:bold;
+	font-size:40px;
+	transform: rotate(-45deg);
+	
+	}
+	
+	.drop_a_pin_form{
+	position:relative;
+	top:50px;
+	margin:5px;
+	padding:5px;
+	border-color:black;
+	border-width:medium;
+	border-style:solid;
+	}
+	
+	#exampleInputFile{
+	overflow:hidden;
+	max-width:100%;
+	}
+	#InputPost{
 	
 	}
 		
