--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,4 @@
-	html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-
+	html, body, #map-canvas { height: 100%;width=100%; margin: 0; padding: 0;}
 	
 	.menu{
 		  height:100%;
@@ -94,7 +93,7 @@
 	border-style:solid;
 	}
 	
-	#exampleInputFile{
+	#InputFile{
 	overflow:hidden;
 	max-width:100%;
 	}
