--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,11 @@
 	html, body, #map-canvas { height: 100%;width=100%; margin: 0; padding: 0;}
 	
+	html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+	
+	
 	.menu{
 		  height:100%;
 		  position:fixed;
