try styling pins
huehuehuehuehue

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -105,6 +105,31 @@
 	#InputPost{
 	
 	}
-
+/*	
+	.pincss{
+	border-color:black;
+	border-width:medium;
+	border-style:solid;
+	height:100px;
+	width:100px;
+	}
+	
+	.pinleftcontent{
+	border-color:blue;
+	border-width:medium;
+	border-style:solid;
+	height:100px;
+	width:100px;
+	}
+	
+	
+	.pinrightcontent{
+	border-color:red;
+	border-width:medium;
+	border-style:solid;
+	height:100px;
+	width:100px;
+	}
+*/
 	
 	
