MAJOR UPDATE 15$ PREORDER ON STEAM

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -3,19 +3,28 @@
 	html, body {
     max-width: 100%;
     overflow-x: hidden;
+	background-color: #32ACED;
+	
 }
 	
 	
 	.menu{
-		  height:100%;
-		  position:fixed;
-		  top:0px;
-		  left:-285px;
-		  width:285px;
+		height:100%;
+		position:fixed;
+		top:0px;
+		left:-285px;
+		width:285px;
+		background-color: #32ACED;
+		color:white;
+		border-right-color:#EB5D1E;
+		border-right-width:large;
+		border-right-style:solid;
 		  }
 		  
 	.page_header{
 	height:70px;
+	background-color: #32ACED;
+	color:white;
 	}
 
 	#icon_main_menu{
@@ -37,7 +46,7 @@
 	
 	.menuheader{
 		height:70px;
-		border-color:black;
+		border-color:#EB5D1E;
 		border-width:medium;
 		border-style:solid;
 	
@@ -60,7 +69,7 @@
 	text-align:right;
 	font-size:20px;
 	font-family:helvetica;
-		border-color:#70B0F9;
+		border-color:#EB5D1E;
 		border-width:medium;
 		border-style:solid;
 	
@@ -93,7 +102,7 @@
 	top:50px;
 	margin:5px;
 	padding:5px;
-	border-color:black;
+	border-color:#70B0F9;
 	border-width:medium;
 	border-style:solid;
 	}
@@ -105,15 +114,64 @@
 	#InputPost{
 	
 	}
-/*	
+
 	.pincss{
 	border-color:black;
 	border-width:medium;
 	border-style:solid;
-	height:100px;
-	width:100px;
+	border-radius: 20px 20px 20px 20px;
+	margin:10px;
+	padding:10px;
+	}
+	.firstHeading{
+	border-top-color:black;
+	border-top-width:medium;
+	border-top-style:solid;
+	border-bottom-color:black;
+	border-bottom-width:medium;
+	border-bottom-style:solid;
+	}
+	 #bodyContent{
+	 padding-bottom:10px;
+	 border-bottom-color:black;
+	border-bottom-width:medium;
+	border-bottom-style:solid;
+	 }
+	 #bodyContent p{
+	 padding-bottom:10px;
+	 border-bottom-color:black;
+	border-bottom-width:medium;
+	border-bottom-style:solid;
+	 }
+	 #bodyContent img{
+	margin-left: auto;
+    margin-right: auto;
+	 }
+	.pinscore{
+	border-color:black;
+	border-width:medium;
+	border-style:solid;
+	border-radius: 20px 20px 20px 20px;
+	margin:10px;
+	padding:10px;
+	overflow:hidden;
+	
+	}
+	.pinscore p{
+	float:left;
+	font-size:15px;
 	}
 	
+	.pinscore button{
+	text-align:right;
+	}
+	.pinscore div{
+	position:relative;
+	left:10%;
+	}
+	
+	
+/*	
 	.pinleftcontent{
 	border-color:blue;
 	border-width:medium;
