--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -3,6 +3,7 @@
 	html, body {
     max-width: 100%;
     overflow-x: hidden;
+	overflow:hidden;
 	background-color: #32ACED;
 	
 }
@@ -39,7 +40,7 @@
 	.maintitle{
 		position:relative;
 		top:10px;
-		left:50%;
+		left:43%;
 		font-size:30px;
 	
 	}
@@ -49,16 +50,14 @@
 		border-color:#EB5D1E;
 		border-width:medium;
 		border-style:solid;
-	
+		background-color:#EB5D1E;
 	
 	}
 	
-	
 	.iconBS{
-	
+	float:right;
 	background-repeat:cover;
 	max-height:100%;
-	float:left;
 	}
 	
 	.menucontent{
@@ -72,10 +71,13 @@
 		border-color:#EB5D1E;
 		border-width:medium;
 		border-style:solid;
+		border-radius: 20px 20px 20px 20px;
+		background-color:#EB5D1E;
 	
 	}
-	.close{
+	.iclose{
 		max-height:100%;
+		float:left;
 	
 	}
 	.aboutcontent{
@@ -83,9 +85,11 @@
 	top:50px;
 	margin:20px;
 	padding:20px;
-	border-color:#70B0F9;
+	border-color:#EB5D1E;
 	border-width:medium;
 	border-style:solid;
+	border-radius: 20px 20px 20px 20px;
+	background-color:#EB5D1E;
 	}
 	.blablabla{
 	
@@ -102,9 +106,11 @@
 	top:50px;
 	margin:5px;
 	padding:5px;
-	border-color:#70B0F9;
+	border-color:#EB5D1E;
 	border-width:medium;
 	border-style:solid;
+	border-radius: 20px 20px 20px 20px;
+	background-color:#EB5D1E;
 	}
 	
 	#InputFile{
@@ -116,7 +122,9 @@
 	}
 
 	.pincss{
-	border-color:black;
+	background-color:#32ACED;
+	border-color:#EB5D1E;
+	color:white;
 	border-width:medium;
 	border-style:solid;
 	border-radius: 20px 20px 20px 20px;
@@ -124,22 +132,22 @@
 	padding:10px;
 	}
 	.firstHeading{
-	border-top-color:black;
+	border-top-color:#EB5D1E;
 	border-top-width:medium;
 	border-top-style:solid;
-	border-bottom-color:black;
+	border-bottom-color:#EB5D1E;
 	border-bottom-width:medium;
 	border-bottom-style:solid;
 	}
 	 #bodyContent{
 	 padding-bottom:10px;
-	 border-bottom-color:black;
+	 border-bottom-color:#EB5D1E;
 	border-bottom-width:medium;
 	border-bottom-style:solid;
 	 }
 	 #bodyContent p{
 	 padding-bottom:10px;
-	 border-bottom-color:black;
+	 border-bottom-color:#EB5D1E;
 	border-bottom-width:medium;
 	border-bottom-style:solid;
 	 }
@@ -148,7 +156,7 @@
     margin-right: auto;
 	 }
 	.pinscore{
-	border-color:black;
+	border-color:#EB5D1E;
 	border-width:medium;
 	border-style:solid;
 	border-radius: 20px 20px 20px 20px;
