--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -8,7 +8,14 @@
 	
 }
 	
-	
+	.copyright{
+	position:relative;
+	top:50%;
+	margin:10px;
+	padding:20px;
+	text-align:right;
+	font-size:20px;
+	}
 	.menu{
 		height:100%;
 		position:fixed;
