--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -99,12 +99,16 @@
 	background-color:#EB5D1E;
 	}
 	.blablabla{
-	
+	margin:10px;
+	padding:10px;
 	position:relative;
 	top:100px;
 	font-weight:bold;
-	font-size:40px;
-	transform: rotate(-45deg);
+	font-size:20px;
+	border-color:#EB5D1E;
+	border-width:medium;
+	border-style:solid;
+	border-radius: 20px 20px 20px 20px;
 	
 	}
 	
